--- a/Index.html
+++ b/Index.html
@@ -5,24 +5,31 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/dcfe60f225.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/template.css">
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <main>
-      <div class="container">
-        <article>
-          <section>
-            <h2></h2>
-          </section>
-          <section>
-            <h2></h2>
-          </section>
-        </article>
-
+    <header>
+      <div>
+        <a href="#">
+          <i class="fas fa-bars"></i>
+          <!-- <i class="fas fa-window-close"></i> -->
+        </a>
+        <h1><a href="">Five Location</a></h1>
       </div>
-    </main>
-
-
+      <nav>
+        <ul>
+          <li><a href=""></a>LOCATION</li>
+          <li><a href=""></a>MENU</li>
+          <li><a href=""></a>CONTACT</li>
+          <li><a href=""></a>COVID-19</li>
+        </ul>
+        <div>
+          <a href="#"><i class="fas fa-map-marker-alt"></i></a>
+          <a href="#"><i class="fab fa-canadian-maple-leaf"></i></a>
+        </div>
+      </nav>
+    </header>
   </body>
 </html>
