images in commit

--- a/Index.html
+++ b/Index.html
@@ -37,13 +37,87 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
     </div>
-    <main>
-      <div class="background-banner">
-        <h2>MENU</h2>
-        <p>Five Guys' passion for food is shared with our fans, which is why we never compromise. Fresh ingredients hand-prepared that satisfy your craving.</p>
-        <p>SCROLL DOWN TO VIEW THE MENU</p>
+    <div class="banner">
+      <h2>MENU</h2>
+      <p>Five Guys' passion for food is shared with our fans, which is why we never compromise. Fresh ingredients hand-prepared that satisfy your craving.</p>
+      <p>SCROLL DOWN TO VIEW THE MENU</p>
+      <a href="#menu-content">Down Arrow</a>
+    </div>
+    <main id="menu-content">
+      <section>
+        <a href="#">Ingredient & Allergen Guide</a>
+        <h3>DOGS</h3>
+        <ul>
+          <li><a href="#">Kosher Style Hot Dog</a></li>
+          <li><a href="#">Cheese Dog</a></li>
+          <li><a href="#">Bacon Dog</a></li>
+          <li><a href="#">Bacon Cheese Dog</a></li>
+        </ul>
+      </section>
+      <section>
+        <h3>SANDWICHES</h3>
+        <ul>
+          <li><a href="#">Veggie Sandwich</a></li>
+          <li><a href="#">Cheese Veggie Sandwich</a></li>
+          <li><a href="#">Grilled Cheese</a></li>
+          <li><a href="#">BLT</a></li>
+        </ul>
+      </section>
+      <section>
+        <p>Choose as many of our free toppings:</p>
+        <ul class="wrap">
+          <li><a href="#">Mayo</a></li>
+          <li><a href="#">Lettuce</a></li>
+          <li><a href="#">Pickles</a></li>
+          <li><a href="#">Tomatoes</a></li>
+          <li><a href="#">Grilled Onions</a></li>
+          <li><a href="#">Grilled Mushrooms</a></li>
+          <li><a href="#">Ketchup</a></li>
+          <li><a href="#">Mustard</a></li>
+          <li><a href="#">Relish</a></li>
+          <li><a href="#">Onions</a></li>
+          <li><a href="#">Jalapeño Peppers</a></li>
+          <li><a href="#">Green Peppers</a></li>
+          <li><a href="#">Bar-B-Que Sauce</a></li>
+          <li><a href="#">Hot Sauce</a></li>
+          <li><a href="#">A1 Sauce</a></li>
+        </ul>
+      </section>
+      <section>
+        <h3>FRIES</h3>
+        <p>Fresh cut potatoes cooked in pure, no-cholestrol, 100% peanut oil.</p>
+        <ul>
+          <li><a href="#">Five Guys Style</a></li>
+          <li><a href="#">Cajun Style</a></li>
+          <li><a href="#">Poutine*</a></li>
+        </ul>
+      </section>
+      <section>
+        <h3>MILKSHAKES*</h3>
+        <h4>Handspun vanilla milkshakes with or without whipped cream.</h4>
+        <h4>Choose as many of our free mix-ins:</h4>
+        <ul class="wrap">
+          <li><a href="#">Bacon</a></li>
+          <li><a href="#">Bananas</a></li>
+          <li><a href="#">Strawberries</a></li>
+          <li><a href="#">Chocolate</a></li>
+          <li><a href="#">Coffee</a></li>
+          <li><a href="#">Malted Milk</a></li>
+          <li><a href="#">Oreo Cookie Pieces</a></li>
+          <li><a href="#">Peanut butter</a></li>
+          <li><a href="#">Salted Caramel</a></li>
+          <li><a href="#">Vanilla</a></li>
+        </ul>
+        <p>*Available only at participating locations.</p>
+      </section>
+      <section>
+      <h3>DRINKS</h3>
+      <p>We proudly serve Coca-Cola products</p>
+      <img src="img/Coke-disk.jpg" alt="coca cola image"/>
+      <div>
+        <a href="#">OUR STORY</a>
       </div>
-
+      </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="js/main.js">
